--- a/contact.html
+++ b/contact.html
@@ -28,34 +28,43 @@
     
 
     <header>
-      <nav class="navbar navbar-default navbar-top navbar-fixed-top clearfix">
+      <nav class="navbar navbar-default navbar-top navbar-fixed-top">
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header clearfix">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand logo-title" href="index.html">阿蘭城休閒農場</a>
-          </div>
+          <div class="row ">
 
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav clearfix">
-              <li><a href="index.html">首頁</a></li>
-              <li><a href="about.html">關於我</a></li>
-              <li><a href="course.html">課程</a></li>
-              <li><a href="products.html">商品一覽</a></li>
-              <li><a href="form.html">報名表</a></li>
-              <li class="active"><a href="contact.html">與我聯繫</a></li>
-            </ul>
-          </div><!-- /.navbar-collapse -->
+
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <!-- <span class="sr-only">Toggle navigation</span> -->
+                <span class="icon-bar" style="background-color: #fff;"></span>
+                <span class="icon-bar" style="background-color: #fff;"></span>
+                <span class="icon-bar" style="background-color: #fff;"></span>
+              </button>
+              <a class="navbar-brand logo-title" href="index.html">阿蘭城休閒農場</a>
+
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <li><a href="index.html">首頁</a></li>
+                <li><a href="about.html">關於我</a></li>
+                <li><a href="course.html">課程</a></li>
+                <li><a href="products.html">商品一覽</a></li>
+                <li><a href="form.html">報名表</a></li>
+                <li class="active"><a href="contact.html">與我聯繫</a></li>
+              </ul>
+            </div><!-- /.navbar-collapse -->
+
+
+
+          </div><!-- /.row -->
+
         </div><!-- /.container -->
       </nav>
     </header>
-
+      
 
 
 
@@ -77,7 +86,6 @@
                   <div class="w-100">
                     <span>營業時間:</span>
                   </div>
-                  <!-- <div class="w-100">Mon - Fri <br>11:00am to 19:00pm</div> -->
                   <div class="w-100">Fri - Sun <br>11:00am to 20:00pm</div>
                 </li>
                 <li class="list-group-item">
@@ -124,7 +132,7 @@
           <div class="col-md-12 text-center">
 
             <h2>聯絡我們</h2>
-            <hr class="colored" style="background-color:red;">
+            <hr class="colored" style="width: 90%; border: 1px solid #e4e4e4;">
             <p>
               <h4>想進一步瞭解a-lan-chen產品、服務，或有任何寶貴意見，都歡迎您與我們聯繫，我們將竭誠為您服務!</h4>
             </p>
