--- a/form.html
+++ b/form.html
@@ -35,45 +35,40 @@
       <nav class="navbar navbar-default navbar-top navbar-fixed-top">
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand logo-title" href="index.html">阿蘭城休閒農場</a>
+          <div class="row">
+
+
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar" style="background-color: #fff;"></span>
+                <span class="icon-bar" style="background-color: #fff;"></span>
+                <span class="icon-bar" style="background-color: #fff;"></span>
+              </button>
+              <a class="navbar-brand logo-title" href="index.html">阿蘭城休閒農場</a>
+
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <li><a href="index.html">首頁</a></li>
+                <li><a href="about.html">關於我</a></li>
+                <li><a href="course.html">課程</a></li>
+                <li><a href="products.html">商品一覽</a></li>
+                <li class="active"><a href="form.html">報名表</a></li>
+                <li><a href="contact.html">與我聯繫</a></li>
+              </ul>
+            </div><!-- /.navbar-collapse -->
+
+
+
           </div>
 
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li><a href="index.html">首頁</a></li>
-              <li><a href="about.html">關於我</a></li>
-              <li><a href="course.html">課程</a></li>
-              <li><a href="products.html">商品一覽</a></li>
-              <li class="active"><a href="form.html">報名表</a></li>
-              <li><a href="contact.html">與我聯繫</a></li>
-            </ul>
-          </div><!-- /.navbar-collapse -->
         </div><!-- /.container -->
-
-        <!-- panel 切換頁面 -->
-        <!-- <div class="admin-panel"> -->
-        <!-- <div class="regist-form slidebar text-center">
-          <ul class="regist-ul">
-            <li class="regist-li" style="border-left: 1px solid #00f;"><a href="#"  name="tab1"><i class="fa fa-tachometer fa-2x"></i>link</a></li>
-              <li class="regist-li"><a href="#" name="tab2"><i class="fa fa-tachometer fa-2x"></i>link</a></li>
-            <li class="regist-li"><a href="#" name="tab3"><i class="fa fa-tachometer fa-2x"></i>link</a></li>
-            <li class="regist-li" style="border-right: 1px solid #00f;"><a href="#" name="tab4"><i class="fa fa-tachometer fa-2x"></i>link</a></li>
-          </ul>
-        </div> -->
-        <!-- </div> -->
-
-
       </nav>
-      
     </header>
+      
 
 
     <section class="container-fluid">
@@ -128,7 +123,7 @@
           <div id="tab1" class="tabpanel">
             <h2 class="text-center header＿panel">苦行健康營3天2夜報名表</h2> 
             <!-- 這邊是欄位一 -->
-            <div class="container text-center">
+            <div class="container-fluid text-center">
               <div class="row">
                 <div class="col-lg-12 mx-auto">
                   <div id="mc_embed_signup">
@@ -143,7 +138,7 @@
           <div id="tab2" class="tabpanel personalSame">
             <h2 class="text-center header＿panel">場地租借報名表</h2>
             <!-- 這邊是欄位二 -->
-            <div class="container text-center">
+            <div class="container-fluid text-center">
               <div class="row">
                 <div class="col-lg-12 mx-auto">
                   <div id="mc_embed_signup">
@@ -155,8 +150,9 @@
             <!-- 這邊是欄位一 end -->
           </div>
           <div id="tab3" class="tabpanel personalSame">
-            <h2 class="text-center header＿panel">阿蘭城休閒農場套裝行程一＊報名表</h2>
+            <h2 class="text-center header＿panel">農場套裝行程一＊報名表</h2>
             <!-- 這邊是欄位三 -->
+            <div class="container-fluid text-center">
             <div class="row">
                 <div class="col-lg-12 mx-auto">
                   <div id="mc_embed_signup">
@@ -164,6 +160,7 @@
                   </div>
                 </div>
               </div>
+            </div>
             </div>
             <!-- 這邊是欄位三 end -->
           </div>
