--- a/products.html
+++ b/products.html
@@ -35,18 +35,22 @@
 <body>
     
 
-    <header>
-      <nav class="navbar navbar-default navbar-top navbar-fixed-top">
-        <div class="container">
-          <!-- Brand and toggle get grouped for better mobile display -->
+  <header>
+    <nav class="navbar navbar-default navbar-top navbar-fixed-top">
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="row">
+
+
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
+              <span class="icon-bar" style="background-color: #fff;"></span>
+              <span class="icon-bar" style="background-color: #fff;"></span>
+              <span class="icon-bar" style="background-color: #fff;"></span>
             </button>
             <a class="navbar-brand logo-title" href="index.html">阿蘭城休閒農場</a>
+
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -60,9 +64,15 @@
               <li><a href="contact.html">與我聯繫</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
-        </div><!-- /.container -->
-      </nav>
-    </header>
+
+
+
+        </div>
+
+      </div><!-- /.container -->
+    </nav>
+  </header>
+      
 
 
 
