Modify the picture style

--- a/course.html
+++ b/course.html
@@ -48,8 +48,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li><a href="index.html">首頁</a></li>
-                <li><a href="about.html">關於我</a></li>
+                <!-- <li><a href="index.html">首頁</a></li> -->
+                <li><a href="index.html">關於我</a></li>
                 <li class="active"><a href="course.html">課程</a></li>
                 <li><a href="products.html">商品一覽</a></li>
                 <li><a href="form.html">報名表</a></li>
@@ -65,14 +65,34 @@
       </nav>
     </header>
       
+    <!--banner-->
+    <div class="bannerArea b-box"><!--bannnerArea-->
+      <div class="wrap b-box"><!--wrap-->
+        <div class="bannerBox"><!--bannerBox-->
+          <ul id="banner">
+            <li style="background-image:url('imgs/alanchen/2G0A9539.jpg')">
+              <img src="" alt="">
+		          <div class="Img">
+                <!-- <img src="https://www.cingjing.gov.tw/upload/banner_ins_list/f5271c1214901768fc118dbfb91fb199.jpg" alt="banner"> -->
+              </div>
+		          <div class="Txt">
+                <div class="wrap">
+                  <em>Welcome to Qinging Farm</em>
+                  <strong>北歐風情，戀上清境風采</strong>
+                </div>
+              </div>
+        		</li>	    
+          </ul>
+	      </div><!--bannerBox end-->
+      </div><!--wrap end-->
+    </div><!--bannerArea end-->
 
 
-
-
+    
     <!-- course Section -->
-    <section class="section page-section pageSection " id="course">
-      <div class="container text-center lession_icon">
-        <div class="row course-center-vertical">
+    <section class="container page-section pageSection " id="course">
+
+        <div class="row admin-panel">
 
           <div class="col-md-12">
             <div class="text-center wow fadeIn">
@@ -80,9 +100,9 @@
               <hr class="colored">
             </div>
           </div>
-        <!-- <div class="row"> -->
+
           <!-- course Item 1 -->
-          <div class="col-lg-4 wow fadeIn" data-wow-delay=".2s">
+          <div class="col-md-4 wow fadeIn" data-wow-delay=".2s">
             <div class="media">
               <div class="pull-left icon_circle">
                 <i class="fa fa-user-plus rounded-circle" style="color:#000;"></i>
@@ -103,7 +123,7 @@
           </div>
 
           <!-- course Item 2 -->
-          <div class="col-lg-4 wow fadeIn" data-wow-delay=".4s">
+          <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
             <div class="media">
               <div class="pull-left icon_circle">
                 <i class="fa fa-user-plus rounded-circle" style="color:#000;"></i>
@@ -124,7 +144,7 @@
           </div>
 
           <!-- course Item 3 -->
-          <div class="col-lg-4 wow fadeIn" data-wow-delay=".6s">
+          <div class="col-md-4" data-wow-delay=".6s">
             <div class="media">
               <div class="pull-left icon_circle">
                 <i class="fa fa-user-plus rounded-circle" style="color:#000;"></i>
@@ -140,17 +160,18 @@
                   <li>0935-126-095鄭榮珍師姐</li>
                 </ul>
                 <p><a href="https://www.facebook.com/%E9%98%BF%E9%BB%8E%E6%98%AF%E6%B2%89%E9%A6%99%E6%9C%83%E9%A4%A8-%E6%9C%A8%E4%B9%8B%E7%9C%9F%E4%B8%B9-125467274322266/"><b>詳閱內文</b></a></p>
-              </div>
             </div>
           </div>
-        <!-- </div> -->
+
+        </div>
 
 
       </div><!-- row -->
-      </div>
+
     </section>
     <!-- End course Section -->
   
+    <div class="img-local"></div>
 
     <!-- Footer -->
     <footer class="footer foot-all">
