--- a/products.html
+++ b/products.html
@@ -56,8 +56,8 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li><a href="index.html">首頁</a></li>
-              <li><a href="about.html">關於我</a></li>
+              <!-- <li><a href="index.html">首頁</a></li> -->
+              <li><a href="index.html">關於我</a></li>
               <li><a href="course.html">課程</a></li>
               <li class="active"><a href="products.html">商品一覽</a></li>
               <li><a href="form.html">報名表</a></li>
@@ -75,15 +75,36 @@
       
 
 
+  <!--banner-->
+  <div class="bannerArea b-box"><!--bannnerArea-->
+    <div class="wrap b-box"><!--wrap-->
+      <div class="bannerBox"><!--bannerBox-->
+        <ul id="banner">
+          <li style="background-image:url('imgs/alanchen/2G0A9539.jpg')">
+            <img src="" alt="">
+            <div class="Img">
+              <!-- <img src="https://www.cingjing.gov.tw/upload/banner_ins_list/f5271c1214901768fc118dbfb91fb199.jpg" alt="banner"> -->
+            </div>
+            <div class="Txt">
+              <div class="wrap">
+                <em>Welcome to Qinging Farm</em>
+                <strong>北歐風情，戀上清境風采</strong>
+              </div>
+            </div>
+          </li>	    
+        </ul>
+      </div><!--bannerBox end-->
+    </div><!--wrap end-->
+  </div><!--bannerArea end-->
 
 
 
     
     <!-- products Gallery -->
     <section class="page-section" id="collections">
-        <div class="container wow fadeIn slider-area">
-
-          <div class="text-center">
+        <div class="container admin-panel">
+          <div class="row course-center-vertical">
+          <div class="col-md-12 text-center">
             <h2>商品一覽</h2>
             <hr class="colored">
           </div>
@@ -104,8 +125,8 @@
 
             <div class="box item">
               <div class="pic">
-                <a href="imgs/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
-                  <img src="imgs/S__128606211.jpg" class="img-fluid mx-auto" alt="3">
+                <a href="imgs/imgLocal/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
+                  <img src="imgs/imgLocal/S__128606211.jpg" class="img-fluid mx-auto" alt="3">
                 </a>
               </div>
               <div class="txt">
@@ -115,8 +136,8 @@
 
             <div class="box item">
               <div class="pic">
-                <a href="imgs/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
-                  <img src="imgs/S__128606211.jpg" class="img-fluid mx-auto" alt="4">
+                <a href="imgs/imgLocal/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
+                  <img src="imgs/imgLocal/S__128606211.jpg" class="img-fluid mx-auto" alt="4">
                 </a>
               </div>
               <div class="txt">
@@ -126,8 +147,8 @@
 
             <div class="box item">
               <div class="pic">
-                <a href="imgs/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
-                  <img src="imgs/S__128606211.jpg" class="img-fluid mx-auto" alt="5">
+                <a href="imgs/imgLocal/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
+                  <img src="imgs/imgLocal/S__128606211.jpg" class="img-fluid mx-auto" alt="5">
                 </a>
               </div>
               <div class="txt">
@@ -137,8 +158,8 @@
 
             <div class="box item">
               <div class="pic">
-                <a href="imgs/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
-                  <img src="imgs/S__128606211.jpg" class="img-fluid mx-auto" alt="6">
+                <a href="imgs/imgLocal/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
+                  <img src="imgs/imgLocal/S__128606211.jpg" class="img-fluid mx-auto" alt="6">
                 </a>
               </div>
               <div class="txt">
@@ -148,8 +169,8 @@
 
             <div class="box item">
               <div class="pic">
-                <a href="imgs/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
-                  <img src="imgs/S__128606211.jpg" class="img-fluid mx-auto" alt="7">
+                <a href="imgs/imgLocal/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
+                  <img src="imgs/imgLocal/S__128606211.jpg" class="img-fluid mx-auto" alt="7">
                 </a>
               </div>
               <div class="txt">
@@ -159,8 +180,8 @@
 
             <div class="box item">
               <div class="pic">
-                <a href="imgs/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
-                  <img src="imgs/S__128606211.jpg" class="img-fluid mx-auto" alt="8">
+                <a href="imgs/imgLocal/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
+                  <img src="imgs/imgLocal/S__128606211.jpg" class="img-fluid mx-auto" alt="8">
                 </a>
               </div>
               <div class="txt">
@@ -170,8 +191,8 @@
 
             <div class="box item">
               <div class="pic">
-                <a href="imgs/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
-                  <img src="imgs/S__128606211.jpg" class="img-fluid mx-auto" alt="9">
+                <a href="imgs/imgLocal/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
+                  <img src="imgs/imgLocal/S__128606211.jpg" class="img-fluid mx-auto" alt="9">
                 </a>
               </div>
               <div class="txt">
@@ -180,10 +201,11 @@
             </div>
 
           </div>
-        </div>
+        </div><!-- row -->
+        </div><!-- container -->
     </section><!-- products Gallery -->
 
-
+    <div class="img-local"></div>
 
     <!-- Footer -->
     <footer class="footer foot-all">
