finish (about column html mistake)

--- a/contact.html
+++ b/contact.html
@@ -15,13 +15,16 @@
     <meta property="og:url" content="http://">
     <meta property="og:image" content="http://www.genesys-tech.com/img/ogimage.jpg" />
     <!-- seo end -->
-    <title>contact阿蘭城休閒農場Ａ-Lan-Chen Farm</title>
+    <title>阿蘭城休閒農場 alanchen-farm</title>
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- wow.js / animate.css-->
+    <link rel="stylesheet" href="css/animate.css">
+    <!-- 我修改資料 -->
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -53,11 +56,7 @@
                 <li class="active"><a href="contact.html">與我聯繫</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
-
-
-
           </div><!-- /.row -->
-
         </div><!-- /.container -->
       </nav>
     </header>
@@ -69,21 +68,6 @@
     <div class="bannerBox"><!--bannerBox-->
       <ul id="banner">
         <li style="background-image:url('imgs/alanchen/2G0A9539.jpg')" style="opacity:.5; filter:alpha(opacity=.5);">
-          <!-- /* 针对 IE8 以及更早的版本 */ -->
-
-          <!-- <div class="Img"> -->
-            <!-- <img src="https://www.cingjing.gov.tw/upload/banner_ins_list/f5271c1214901768fc118dbfb91fb199.jpg" alt="banner" style="width: 100%; height: 300px; background-position: center 55%"> -->
-          <!-- </div> -->
-
-
-          <!--不需要 -->
-          <!-- <div class="Txt">
-            <div class="wrap">
-              <em>Welcome to Qinging Farm</em>
-              <strong>北歐風情，戀上清境風采</strong>
-            </div>
-          </div> -->
-
         </li>	    
       </ul>
     </div><!--bannerBox end-->
@@ -153,7 +137,7 @@
 
     <!-- Contact Section -->
     <section class="page-section pricing contact-all use-flexbox" id="contact">
-        <div class="container ">
+        <div class="container animated tada">
             <!-- send-mailBag下  / contact-row 上-->
           <div class=" container-fluid row text-center center-block send-mailBag">
             
@@ -173,14 +157,10 @@
                 </a>
               </div>
             </div>
-
           </div><!--row-->
-
-
         </div><!--container-->
 
         </div>
-
       </section>
 
 
@@ -244,4 +224,6 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!-- owl -->
 <script src="ide/OwlCarousel2-2.3.3/dist/owl.carousel.min.js"></script>
+<!-- wow.js animat -->
+<script src="jhttps://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 <script src="js/main.js"></script>
