--- a/course.html
+++ b/course.html
@@ -15,13 +15,14 @@
     <meta property="og:url" content="http://" />
     <meta property="og:image" content="http://www.genesys-tech.com/img/ogimage.jpg" />
     <!-- seo end -->
-    <title>course阿蘭城休閒農場Ａ-Lan-Chen Farm</title>
+    <title>阿蘭城休閒農場 alanchen-farm</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+    <!-- wow.js / animate.css-->
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -31,8 +32,6 @@
       <nav class="navbar navbar-default navbar-top navbar-fixed-top">
         <div class="container">
           <div class="row">
-
-
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
@@ -42,8 +41,7 @@
               </button>
               <a class="navbar-brand logo-title" href="index.html">阿蘭城休閒農場</a>
             </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
+            <!-- nav links -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
                 <li><a href="index.html">首頁</a></li>
@@ -55,9 +53,6 @@
                 <li><a href="contact.html">與我聯繫</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
-
-
-
           </div><!-- row -->
         </div><!-- container -->
       </nav>
@@ -69,9 +64,7 @@
         <div class="bannerBox">
           <ul id="banner">
             <li style="background-image:url('imgs/alanchen/2G0A9539.jpg')">
-		          <div class="Img">
-                <!-- <img src="https://www.cingjing.gov.tw/upload/banner_ins_list/f5271c1214901768fc118dbfb91fb199.jpg" alt="banner"> -->
-              </div>
+		          <div class="Img"></div>
         		</li>	    
           </ul>
 	      </div><!--bannerBox end-->
@@ -79,7 +72,7 @@
     </div><!--bannerArea end-->
 
     <!-- course Section -->
-    <section class="container page-section pageSection " id="course">
+    <section class="container page-section pageSection animated zoomInRight" id="course">
         <div class="row admin-panel">
           <div class="intro-title col-md-12 text-center">
             <h1>
@@ -92,7 +85,8 @@
           <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-delay=".2s">
             <div class="media">
               <div class="icon_circle">
-                <img src="imgs/alancopy/20180507_180507_0007.jpg" alt="" style="width:100%;">
+                <img src="imgs/50immg/5.png" alt="" style="width:100%; height: 400px;">
+                <!-- imgs/alancopy/20180507_180507_0007.jpg -->
               </div>
               <div class=" col-md-12">
                 <h4 class="text-center">品香文化講堂</h4>
@@ -111,7 +105,8 @@
           <div class="col-md-4 col-sm-4 wow fadeIn" data-wow-delay=".4s">
             <div class="media">
               <div class="icon_circle">
-                <img src="imgs/alancopy/20180507_180507_0008.jpg" alt="" style="width:100%;">
+                <img src="imgs/50immg/6.png" alt="" style="width:100%; height: 400px;">
+                <!-- imgs/alancopy/20180507_180507_0008.jpg -->
               </div>
               <div class="col-md-12">
                 <!-- media-body
@@ -134,7 +129,7 @@
           <div class="col-md-4 col-sm-4 col-xs-12 wow fadeIn" data-wow-delay=".6s">
             <div class="media">
               <div class="icon_circle">
-                <img src="imgs/alancopy/20180507_180507_0011.jpg" alt="" style="width:100%;">
+                <img src="imgs/50immg/2-1.png" alt="" style="width:100%; height: 400px;">
               </div>
               <div class=" col-md-12">
                 <h4 class="text-center">品香文化講堂</h4>
@@ -149,7 +144,8 @@
           </div><!-- container -->
         </div><!-- row -->
     </section><!-- End course Section -->
-  
+
+    <!-- footer img 全覽圖 -->
     <div class="img-local"></div>
 
     <!-- Footer -->
@@ -166,7 +162,7 @@
           <div class="col-md-4 footer-contact-details">
             <h4><i class="fa fa-envelope"></i> 粉絲團</h4>
             <p>
-                <a href="https://www.facebook.com/%E9%98%BF%E9%BB%8E%E6%98%AF%E6%B2%89%E9%A6%99%E6%9C%83%E9%A4%A8-%E6%9C%A8%E4%B9%8B%E7%9C%9F%E4%B8%B9-125467274322266/">阿蘭城休閒農場</a>
+              <a href="https://www.facebook.com/%E9%98%BF%E9%BB%8E%E6%98%AF%E6%B2%89%E9%A6%99%E6%9C%83%E9%A4%A8-%E6%9C%A8%E4%B9%8B%E7%9C%9F%E4%B8%B9-125467274322266/">阿蘭城休閒農場</a>
             </p>
           </div>
         </div>
@@ -204,4 +200,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!-- owl plugin-->
 <script src="ide/OwlCarousel2-2.3.3/dist/owl.carousel.min.js"></script>
+<!-- wow.js animat -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+<!-- 我的修改文件 -->
 <script src="js/main.js"></script>
