--- a/products.html
+++ b/products.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="http://" />
     <meta property="og:image" content="http://www.genesys-tech.com/img/ogimage.jpg" />
     <!-- seo end -->
-    <title>products阿蘭城休閒農場Ａ-Lan-Chen Farm</title>
+    <title>阿蘭城休閒農場 alanchen-farm</title>
 
 
     <!-- Latest compiled and minified CSS -->
@@ -28,7 +28,9 @@
     <link rel="stylesheet" href="ide/OwlCarousel2-2.3.3/dist/assets/owl.carousel.min.css">
     <!-- products slider plugin -->
     <link rel="stylesheet" href="ide/OwlCarousel2-2.3.3/dist/assets/owl.theme.green.min.css">
-<link href="http://themes.startbootstrap.com/vitality-v2.1.0/vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
+    <link href="http://themes.startbootstrap.com/vitality-v2.1.0/vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
+    <!-- wow.js / animate.css-->
+    <link rel="stylesheet" href="css/animate.css">
     <!-- 修改內容 -->
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -62,9 +64,6 @@
               <li><a href="contact.html">與我聯繫</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
-
-
-
         </div>
 
       </div><!-- /.container -->
@@ -99,7 +98,6 @@
 
     
     <!-- products Gallery -->
-    <!-- <section class="container page-section pageSection " id="course"></section> -->
     <section class="container page-section pageSection" id="products" >
           <div class="row admin-panel course-center-vertical">
 
@@ -293,7 +291,9 @@
 <script src="ide/OwlCarousel2-2.3.3/dist/owl.carousel.min.js"></script>
 <!-- products slider plugin -->
 <script src="http://themes.startbootstrap.com/vitality-v2.1.0/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-
+<!-- wow.js animat -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+<!-- 我的修改文件 -->
 <script src="js/main.js"></script>
 
 
@@ -304,10 +304,10 @@
   $('.gallery-link').magnificPopup({
     type: 'image',
     gallery: {
-        enabled: true
+      enabled: true
     },
     image: {
-        titleSrc: 'title'
+      titleSrc: 'title'
     }
   });
 </script>
