--- a/rental.html
+++ b/rental.html
@@ -16,10 +16,12 @@
     <meta property="og:image" content="http://www.genesys-tech.com/img/ogimage.jpg" />
     <!-- seo end -->
 
-    <title>rental阿蘭城休閒農場Ａ-Lan-Chen Farm</title>
+    <title>阿蘭城休閒農場 alanchen-farm</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- wow.js / animate.css-->
+    <link rel="stylesheet" href="css/animate.css">
     <!-- 修改內容 -->    
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -30,8 +32,6 @@
   <nav class="navbar navbar-default navbar-top navbar-fixed-top">
     <div class="container">
       <div class="row">
-
-      
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
@@ -39,10 +39,10 @@
             <span class="icon-bar" style="background-color: #fff;"></span>
             <span class="icon-bar" style="background-color: #fff;"></span>
           </button>
-          <a class="navbar-brand logo-title" href="index.html">阿蘭城休閒農</a>
+          <a class="navbar-brand logo-title" href="index.html">阿蘭城休閒農場</a>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
+        <!-- nav links -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="index.html">首頁</a></li>
@@ -52,12 +52,8 @@
             <li class="active"><a href="rental.html">場地租借</a></li>
             <li><a href="contact.html">與我聯繫</a></li>
           </ul>
-        </div><!-- /.navbar-collapse -->
-
-
-
-      </div>
-
+        </div><!-- /.navbar -->
+      </div><!-- /.row -->
     </div><!-- /.container -->
   </nav>
 </header>
@@ -69,9 +65,7 @@
        <ul id="banner">
          <li style="background-image:url('imgs/alanchen/2G0A9539.jpg')">
            <img src="" alt="">
-           <div class="Img">
-             <!-- <img src="https://www.cingjing.gov.tw/upload/banner_ins_list/f5271c1214901768fc118dbfb91fb199.jpg" alt="banner"> -->
-           </div>
+           <div class="Img"></div>
          </li>	    
        </ul>
      </div><!--bannerBox end-->
@@ -80,7 +74,7 @@
 
 
 
-<section class="new-demo section page-section" id="rental">
+<section class="new-demo section page-section animated fadeInDownBig" id="rental">
   <div class="container" style="padding: 75px 0 75px 0;">
       <div class="row grid">
 
@@ -290,10 +284,10 @@
                 ※ 注意事項：<br>
                 1.租用場地時間，已包含會場佈置時間在內，若需額外時間或提置，則應照加時費規定另支付租金。<br>
                 2.租借以4小時為一時段計費，未滿4小時，仍以一時段計算；加時每30分鐘600元，未滿30分鐘仍以30分鐘計。<br>
-                3.若下一時段有其他單位使用則不得加時。<br>
-                4.請您自備電腦、紙杯/環保杯、衛生紙。<br>
+                3.若下一時段有其他單位使用場底，則不得中途加時間，請於提早一小時於櫃檯詢問是否可加時間。<br>
+                4.請自備電腦、紙杯/環保杯、衛生紙，因只提供場地部分，其他個人需求部分尚未提供。<br>
                 5.若需張貼海報/文宣，請使用無痕膠帶/環保黏土張貼海報宣傳品。<br>
-                6.空間使用完畢需將環境整理乾淨，若環境髒亂將酌收 500 元費。<br>
+                6.空間使用完畢需將環境整理乾淨，若環境髒亂將酌收 500 元清潔費。<br>
               </p>
               <!-- <a href="https://unsplash.com/" target="_blank">Images by Unsplash</a> -->
           </div>
@@ -446,4 +440,6 @@
 <script src="ide/OwlCarousel2-2.3.3/dist/owl.carousel.min.js"></script>
 <!-- icon -->
 <script src="https://use.fontawesome.com/abeb7abf3e.js"></script>
+<!-- wow.js animat -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 <script src="js/main.js"></script>
